修复了文字截断漏洞.fixed text truncation bug

--- a/src/components/switchTheme/switch.module.less
+++ b/src/components/switchTheme/switch.module.less
@@ -4,7 +4,7 @@
   margin: var(--switchCommon-margin);
 
   //background-color: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(5vw);
+  //backdrop-filter: blur(5vw);
   border-radius: 1vw;
   box-sizing: border-box;
 
